--- a/header/index.html
+++ b/header/index.html
@@ -74,7 +74,41 @@
             <p class="card-text">Chiếc tủ được sử nhập khẩu từ Hàn Quốc</p>
             <a href="#" class="btn btn-primary">Xem Chi Tiết</a>
         </div>
-
+        <!--Bản bên kia là của ông à thì tui thấy là nó ko thay dổi j lớn nên có thể ghi đè-->
+        <!--Thui nhắn nhé :))))um` ông nhìn dấu ba chấm Nói gì đây nhỉ
+            nó sẽ có hai cái 1 là create create from
+            khi create xong ông bấm publish nó là nó sẽ lên github như nãy ok kook
+            bước 1: bấm vô dấu ba chấm tìm branch bấm create
+            Bước 2: nhập tên nhánh ông muốn rồi enter nhưng nó chưa tạo
+            Bước 3: ông muốn nó hiện thị nhánh mới tạo lên git hub thì ông bấm vô dấu ba chấm tìm branch tìm publish
+            nhánh thịnh đã được tạo ok chưaok
+           
+            giờ chuyển nhánh ha mà cái này là bên nam dep trai vo doi hả
+            Bước 1: Bấm dấu 3 chấm tìm checkout to
+            Bước 2: Tui sẽ chuyển sang nhánh thịnh để làm việc (Lưu ý ở đây check out nó sẽ có lưu bản cũ và 
+            dễ lỗi nếu làm sai ở chỗ nào xong quay lại nhánh cũ đã từng check out ấy ông, cẩn thận ko là clone từ đầu)
+            Bước 3: Hiện tại tui đang ở nhánh Thịnh và tui sẽ push lên nhánh thịnh
+            ok phần chuyển nhánh chưa ok
+            từ từ
+            save cái này lại rồi commit
+            ông thấy ko đây là cái chuyển nhánh nãy nói :)))
+            Push nha
+            này trang chính nhỉ
+            Bước 1: commit (Commit phần mình và nếu có chức năng hỗ trợ comment bên github desktop thì ghi rõ càng tốt)
+            Cấu trúc commit: Việc mình làm + commit
+            rồi bấm commit
+            thì hiện tại là tui commit nhưng chưa stagechange nha thì nó chỉ lưu trạng thái lưu mới nãy nha giờ thì tui dùng stage change nó sẽ khác
+            (Phần mới nha)Giờ tui đã stage change thì nó lưu luôn cái đó commit là push lun
+            Thì stage change như publish vậy nó đảm bảo rằng ông push những cái gì nếu không nhấn vô dấu công thì nó ko đưa lên vậy thui
+            còn cái web hình như ko phải tệp này nên nó ko lên :)))
+            Thấy nó lên chưa ông
+           
+            Nó thiếu phần mới thấy ko ông đấy vậy thui ok chưa ok mà sao ko phải là tệp tui up lên nhỉ
+            cái nào thay đổi hoặc tạo mới thì mới cho thui ông chứ cả tệp lên nó lỗi xung đột nên github nó chỉ cho chỗ nào thay đổi thì chỗ đó lên
+            Còn mà vì sao nhánh master không có hay nhánh thịnh có hết thì bởi ông commit r nhưng push sai nên nó lưu dưới máy này rồi tui commit push đúng nó lên hết bên tui
+            ok chưa ổn
+            nên phải làm đúng nhá thử giờ ông chuyển nhánh qua nam push thử xem
+        -->
     </div>
     <div class="card">
         <img class="card-img-top" src="https://images.demandware.net/dw/image/v2/BBBV_PRD/on/demandware.static/-/Sites-master-catalog/default/dw51873b46/images/productsets/1704177.jpg?sw=1200" alt="">
