Update header commit

--- a/header/index.html
+++ b/header/index.html
@@ -82,7 +82,7 @@
             Bước 2: nhập tên nhánh ông muốn rồi enter nhưng nó chưa tạo
             Bước 3: ông muốn nó hiện thị nhánh mới tạo lên git hub thì ông bấm vô dấu ba chấm tìm branch tìm publish
             nhánh thịnh đã được tạo ok chưaok
-           I love you pặc pặc t
+           I love you pặc pặc tiếp nào
             giờ chuyển nhánh ha mà cái này là bên nam dep trai vo doi hả
             Bước 1: Bấm dấu 3 chấm tìm checkout to
             Bước 2: Tui sẽ chuyển sang nhánh thịnh để làm việc (Lưu ý ở đây check out nó sẽ có lưu bản cũ và 
@@ -90,7 +90,9 @@
             Bước 3: Hiện tại tui đang ở nhánh Thịnh và tui sẽ push lên nhánh thịnh
             ok phần chuyển nhánh chưa ok
             từ từ
-            save cái này lại rồi commit
+            uây gì vậy :)))) commit + stage change mới đc push
+            save cái này lại rồi commit 
+            :))) omedeto nó đi vô hư vô r ủa tui tưởng nhấn commit là nó hiện thông báo có stagechange luôn mà um đúng r mà kiểu 
             rồi ấy ông xử lỗi xung đột vừa nãy luôn giờ ông push đi
             Ông phải vô nhánh của ông để coi nó lên chưa :))) tìm j ở master nhánh Nam mà nãy ông để chuột tui click luôn mà um :))) nó bay r 404 áy c
             ông thấy ko đây là cái chuyển nhánh nãy nói :))
