Update header commit

--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
             Bước 3: Kiểm tra
             Bước 4: Thấy ok 
             lạ thiệt sao nó ko hiện như kia ta
+            hỏi trường
+            Merge branch ha
+            Bước 1: nhấn dấu ba chấm tìm branch chọn merge branch
+            Bước 2: chọn branch cần merge (Lưu ý hai branch phải khác nhau về mặt nội dung)
+            Bước 3: commit và sync
         -->
     </div>
     <div class="card">
